# multi-model-query

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: multi-query.md
.github/workflows/: ci.yml
docs/: architecture.md  ci-cd-standards.md  crawl-walk-run.md
examples/: compare_models.sh  simple_query.py
scripts/: multi-model-query.py
src/multi_model_lib/: __init__.py  config.py  engine.py  fallback.py  models.py  registry.py  telemetry.py
tests/: __init__.py  test_config.py  test_models.py  test_registry.py
