[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-model-query"
version = "0.1.0"
description = "Fan out a single prompt to multiple AI models and compare responses"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jonathan Lyn-Shue", email = "jon@anubatechnologies.com" },
]
dependencies = [
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
mmq = "multi_model_lib.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_model_lib"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
